--- a/package.json
+++ b/package.json
@@ -9,16 +9,46 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-scroll-area": "^1.2.3",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
+    "@reduxjs/toolkit": "^2.6.1",
+    "@tanstack/react-query": "^5.71.5",
+    "alasql": "^4.6.6",
+    "autoprefixer": "^10.4.21",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.6.3",
+    "lucide-react": "^0.487.0",
+    "monaco-react": "^1.1.0",
+    "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.2.4"
+    "react-markdown": "^10.1.0",
+    "react-redux": "^9.2.0",
+    "react-resizable": "^3.0.5",
+    "react-resizable-panels": "^2.1.7",
+    "react-textarea-autosize": "^8.5.9",
+    "sonner": "^2.0.3",
+    "tailwind-animate": "^0.2.10",
+    "tailwind-merge": "^3.1.0",
+    "tw-animate-css": "^1.2.5",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "@types/react-highlight.js": "^1.0.5",
+    "@types/react-resizable": "^3.0.8",
+    "date-fns": "^4.1.0",
+    "tailwindcss": "^4",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5"
   }
 }
