--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/standalone": "^7.27.0",
+    "@heroicons/react": "^2.2.0",
     "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-scroll-area": "^1.2.3",
@@ -22,28 +24,47 @@
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "d3": "^7.9.0",
+    "d3-format": "^3.1.0",
+    "d3-time-format": "^4.1.0",
     "framer-motion": "^12.6.3",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.487.0",
     "monaco-react": "^1.1.0",
     "next": "15.2.4",
+    "ramda": "^0.30.1",
     "react": "^19.0.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
+    "react-grid-layout": "^1.5.1",
     "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
     "react-resizable": "^3.0.5",
     "react-resizable-panels": "^2.1.7",
     "react-textarea-autosize": "^8.5.9",
+    "react-vega": "^7.6.0",
+    "recharts": "^2.15.2",
     "sonner": "^2.0.3",
     "tailwind-animate": "^0.2.10",
     "tailwind-merge": "^3.1.0",
     "tw-animate-css": "^1.2.5",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "vega": "^6.1.2",
+    "vega-lite": "^6.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/babel__standalone": "^7.1.9",
+    "@types/d3-format": "^3.0.4",
+    "@types/d3-time-format": "^4.0.3",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
+    "@types/ramda": "^0.30.2",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-grid-layout": "^1.3.5",
     "@types/react-highlight.js": "^1.0.5",
     "@types/react-resizable": "^3.0.8",
     "date-fns": "^4.1.0",
