--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-textarea-autosize": "^8.5.9",
     "react-vega": "^7.6.0",
     "recharts": "^2.15.2",
+    "resize-observer-polyfill": "^1.5.1",
     "sonner": "^2.0.3",
     "tailwind-animate": "^0.2.10",
     "tailwind-merge": "^3.1.0",
