added tags in input

--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@babel/standalone": "^7.27.0",
+    "@draft-js-plugins/editor": "^4.1.4",
+    "@draft-js-plugins/mention": "^5.3.0",
     "@heroicons/react": "^2.2.0",
-    "@monaco-editor/react": "^4.7.0",
+    "@mantine/tiptap": "^7.17.4",
+    "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
@@ -22,15 +25,18 @@
     "@tanstack/react-query": "^5.71.5",
     "alasql": "^4.6.6",
     "autoprefixer": "^10.4.21",
+    "canvas": "^3.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "d3": "^7.9.0",
     "d3-format": "^3.1.0",
     "d3-time-format": "^4.1.0",
+    "draft-js": "^0.11.7",
     "framer-motion": "^12.6.3",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.487.0",
+    "monaco-editor": "^0.44.0",
     "monaco-react": "^1.1.0",
     "next": "15.2.4",
     "ramda": "^0.30.1",
@@ -40,6 +46,7 @@
     "react-dom": "^19.0.0",
     "react-grid-layout": "^1.5.1",
     "react-markdown": "^10.1.0",
+    "react-mentions": "^4.4.10",
     "react-redux": "^9.2.0",
     "react-resizable": "^3.0.5",
     "react-resizable-panels": "^2.1.7",
@@ -60,6 +67,7 @@
     "@types/babel__standalone": "^7.1.9",
     "@types/d3-format": "^3.0.4",
     "@types/d3-time-format": "^4.0.3",
+    "@types/draft-js": "^0.11.18",
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
     "@types/ramda": "^0.30.2",
@@ -67,6 +75,7 @@
     "@types/react-dom": "^19",
     "@types/react-grid-layout": "^1.3.5",
     "@types/react-highlight.js": "^1.0.5",
+    "@types/react-mentions": "^4.4.1",
     "@types/react-resizable": "^3.0.8",
     "date-fns": "^4.1.0",
     "tailwindcss": "^4",
