--- a/package.json
+++ b/package.json
@@ -46,13 +46,14 @@
     "react-dom": "^19.0.0",
     "react-grid-layout": "^1.5.1",
     "react-markdown": "^10.1.0",
-    "react-mentions": "^4.4.10",
+    "react-mentions": "^3.0.2",
     "react-redux": "^9.2.0",
     "react-resizable": "^3.0.5",
     "react-resizable-panels": "^2.1.7",
     "react-textarea-autosize": "^8.5.9",
     "react-vega": "^7.6.0",
     "recharts": "^2.15.2",
+    "remark-gfm": "^4.0.1",
     "resize-observer-polyfill": "^1.5.1",
     "sonner": "^2.0.3",
     "tailwind-animate": "^0.2.10",
