--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tanstack/react-query": "^5.71.5",
     "alasql": "^4.6.6",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.8.4",
     "canvas": "^3.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
