--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@babel/standalone": "^7.27.0",
+    "@codesandbox/sandpack-react": "^2.20.0",
+    "@codesandbox/sandpack-themes": "^2.0.21",
     "@draft-js-plugins/editor": "^4.1.4",
     "@draft-js-plugins/mention": "^5.3.0",
     "@heroicons/react": "^2.2.0",
@@ -45,6 +46,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^5.0.0",
     "react-grid-layout": "^1.5.1",
     "react-markdown": "^10.1.0",
     "react-mentions": "^3.0.2",
@@ -65,6 +67,9 @@
     "vega-lite": "^6.1.0"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.27.0",
+    "@babel/standalone": "^7.27.0",
     "@tailwindcss/postcss": "^4",
     "@types/babel__standalone": "^7.1.9",
     "@types/d3-format": "^3.0.4",
