--- a/package.json
+++ b/package.json
@@ -9,18 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@babel/standalone": "^7.27.0",
-    "@draft-js-plugins/editor": "^4.1.4",
-    "@draft-js-plugins/mention": "^5.3.0",
+    "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
     "@mantine/tiptap": "^7.17.4",
     "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.11",
+    "@radix-ui/react-dropdown-menu": "^2.1.12",
+    "@radix-ui/react-popover": "^1.1.11",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-tooltip": "^1.2.4",
     "@reduxjs/toolkit": "^2.6.1",
     "@tanstack/react-query": "^5.71.5",
     "alasql": "^4.6.6",
@@ -29,10 +31,10 @@
     "canvas": "^3.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "d3": "^7.9.0",
     "d3-format": "^3.1.0",
     "d3-time-format": "^4.1.0",
-    "draft-js": "^0.11.7",
     "framer-motion": "^12.6.3",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
@@ -54,6 +56,7 @@
     "react-textarea-autosize": "^8.5.9",
     "react-vega": "^7.6.0",
     "recharts": "^2.15.2",
+    "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
     "resize-observer-polyfill": "^1.5.1",
     "sonner": "^2.0.3",
@@ -61,15 +64,15 @@
     "tailwind-merge": "^3.1.0",
     "tw-animate-css": "^1.2.5",
     "uuid": "^11.1.0",
+    "vaul": "^1.1.2",
     "vega": "^6.1.2",
     "vega-lite": "^6.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@types/babel__standalone": "^7.1.9",
     "@types/d3-format": "^3.0.4",
     "@types/d3-time-format": "^4.0.3",
-    "@types/draft-js": "^0.11.18",
+    "@types/hast": "^3.0.4",
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
     "@types/ramda": "^0.30.2",
