--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-tooltip": "^1.2.4",
     "@reduxjs/toolkit": "^2.6.1",
     "@tanstack/react-query": "^5.71.5",
+    "@tanstack/react-table": "^8.21.3",
     "alasql": "^4.6.6",
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
@@ -56,6 +57,7 @@
     "react-textarea-autosize": "^8.5.9",
     "react-vega": "^7.6.0",
     "recharts": "^2.15.2",
+    "redux-persist": "^6.0.0",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
     "resize-observer-polyfill": "^1.5.1",
