--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "postinstall": "node node_modules/next/dist/bin/next telemetry disable && node node_modules/lightningcss/install.js",
     "lint": "next lint"
   },
   "dependencies": {
@@ -42,7 +43,7 @@
     "lucide-react": "^0.488.0",
     "monaco-editor": "^0.44.0",
     "monaco-react": "^1.1.0",
-    "next": "15.2.4",
+    "next": "^15.3.1",
     "ramda": "^0.30.1",
     "react": "^19.0.0",
     "react-dnd": "^16.0.1",
