--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "postinstall": "node node_modules/next/dist/bin/next telemetry disable && node node_modules/lightningcss/install.js",
+    "postinstall": "node node_modules/next/dist/bin/next telemetry disable",
     "lint": "next lint"
   },
   "dependencies": {
@@ -86,6 +86,7 @@
     "@types/react-mentions": "^4.4.1",
     "@types/react-resizable": "^3.0.8",
     "date-fns": "^4.1.0",
+    "lightningcss": "^1.29.3",
     "tailwindcss": "^4",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
