--- a/package.json
+++ b/package.json
@@ -51,11 +51,14 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
     "react-grid-layout": "^1.5.1",
+    "react-json-tree": "^0.20.0",
     "react-markdown": "^10.1.0",
     "react-mentions": "^3.0.2",
     "react-redux": "^9.2.0",
     "react-resizable": "^3.0.5",
     "react-resizable-panels": "^2.1.7",
+    "react-scroll": "^1.9.3",
+    "react-scroll-to-bottom": "^4.2.0",
     "react-textarea-autosize": "^8.5.9",
     "react-vega": "^7.6.0",
     "recharts": "^2.15.2",
@@ -86,6 +89,7 @@
     "@types/react-highlight.js": "^1.0.5",
     "@types/react-mentions": "^4.4.1",
     "@types/react-resizable": "^3.0.8",
+    "@types/react-scroll": "^1.8.10",
     "date-fns": "^4.1.0",
     "lightningcss": "^1.29.3",
     "tailwindcss": "^4.1.5",
