--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "d3": "^7.9.0",
     "d3-format": "^3.1.0",
     "d3-time-format": "^4.1.0",
+    "echarts": "^5.6.0",
     "framer-motion": "^12.6.3",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
