--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mantine/tiptap": "^7.17.4",
     "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-popover": "^1.1.11",
@@ -40,6 +41,7 @@
     "d3-time-format": "^4.1.0",
     "echarts": "^5.6.0",
     "framer-motion": "^12.6.3",
+    "html2canvas": "^1.4.1",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.488.0",
