--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mantine/tiptap": "^7.17.4",
     "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.12",
