--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.14.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
     "@mantine/tiptap": "^7.17.4",
     "@monaco-editor/react": "^4.6.0",
+    "@mui/material": "^7.2.0",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-collapsible": "^1.1.11",
@@ -50,6 +54,9 @@
     "monaco-editor": "^0.44.0",
     "monaco-react": "^1.1.0",
     "next": "^15.3.1",
+    "next-themes": "^0.4.6",
+    "notistack": "^3.0.2",
+    "prop-types": "^15.8.1",
     "ramda": "^0.30.1",
     "react": "^19.0.0",
     "react-dnd": "^16.0.1",
@@ -71,9 +78,10 @@
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
     "resize-observer-polyfill": "^1.5.1",
-    "sonner": "^2.0.3",
+    "sonner": "^2.0.6",
     "tailwind-animate": "^0.2.10",
     "tailwind-merge": "^3.1.0",
+    "tailwindcss": "^3.4.17",
     "tw-animate-css": "^1.2.5",
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
@@ -95,9 +103,9 @@
     "@types/react-mentions": "^4.4.1",
     "@types/react-resizable": "^3.0.8",
     "@types/react-scroll": "^1.8.10",
+    "@types/uuid": "^10.0.0",
     "date-fns": "^4.1.0",
     "lightningcss": "^1.29.3",
-    "tailwindcss": "^4.1.5",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
   }
