--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mantine/tiptap": "^7.17.4",
     "@monaco-editor/react": "^4.6.0",
     "@mui/material": "^7.2.0",
+    "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-collapsible": "^1.1.11",
