--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@emotion/cache": "^11.14.0",
@@ -22,6 +23,7 @@
     "@mantine/tiptap": "^7.17.4",
     "@monaco-editor/react": "^4.6.0",
     "@mui/material": "^7.2.0",
+    "@nosferatu500/react-sortable-tree": "^4.4.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.3.2",
@@ -51,6 +53,7 @@
     "d3": "^7.9.0",
     "d3-format": "^3.1.0",
     "d3-time-format": "^4.1.0",
+    "dnd-kit-tree": "^1.0.22",
     "echarts": "^5.6.0",
     "framer-motion": "^12.6.3",
     "html2canvas": "^1.4.1",
@@ -65,6 +68,7 @@
     "prop-types": "^15.8.1",
     "ramda": "^0.30.1",
     "react": "^19.0.0",
+    "react-arborist": "^3.4.3",
     "react-day-picker": "^9.8.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
