feat: update dependencies, add Embrace and Zipy SDK initializers, and enhance dashboard date controls; implement block title editing and date range picker components

--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@embrace-io/web-sdk": "^1.8.1",
     "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-    "@headlessui/react": "^2.2.2",
+    "@headlessui/react": "^2.2.5",
     "@heroicons/react": "^2.2.0",
     "@mantine/tiptap": "^7.17.4",
     "@monaco-editor/react": "^4.6.0",
@@ -89,6 +90,7 @@
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
     "resize-observer-polyfill": "^1.5.1",
+    "simplebar-react": "^3.3.2",
     "sonner": "^2.0.6",
     "tailwind-animate": "^0.2.10",
     "tailwind-merge": "^3.1.0",
@@ -97,7 +99,8 @@
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
     "vega": "^6.1.2",
-    "vega-lite": "^6.1.0"
+    "vega-lite": "^6.1.0",
+    "zipyai": "^1.7.41"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.5",
