feat: add new loading animation component and update loading states; enhance depth limits in CreateAccounts component for improved user experience

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@headlessui/react": "^2.2.5",
     "@heroicons/react": "^2.2.0",
     "@mantine/tiptap": "^7.17.4",
+    "@minoru/react-dnd-treeview": "^3.5.3",
     "@monaco-editor/react": "^4.6.0",
     "@mui/material": "^7.2.0",
     "@nosferatu500/react-sortable-tree": "^4.4.0",
@@ -83,6 +84,8 @@
     "react-resizable-panels": "^2.1.7",
     "react-scroll": "^1.9.3",
     "react-scroll-to-bottom": "^4.2.0",
+    "react-sortable-tree": "^2.8.0",
+    "react-sortable-tree-theme-material-ui": "^1.0.16",
     "react-textarea-autosize": "^8.5.9",
     "react-vega": "^7.6.0",
     "recharts": "^2.15.2",
@@ -117,6 +120,7 @@
     "@types/react-mentions": "^4.4.1",
     "@types/react-resizable": "^3.0.8",
     "@types/react-scroll": "^1.8.10",
+    "@types/react-sortable-tree": "^0.3.23",
     "@types/uuid": "^10.0.0",
     "date-fns": "^4.1.0",
     "lightningcss": "^1.29.3",
